@@ -4,6 +4,8 @@
   * Move Syslog calls into God::Logger and clean up all calling code
   * Remove god's pid file on user requested termination
   * Better handling and cleanup of DRb server's unix domain socket
+* New Conditions
+  * DiskUsage < PollCondition - trigger if disk usage is above limit on mount [Rudy Desjardins]
 
 == 0.5.2 / 2007-10-10
 
